--- a/localtime.html
+++ b/localtime.html
@@ -20,7 +20,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Count Down 2022</title>
+   <link rel="icon" href="https://cdn.discordapp.com/emojis/877009969285845012.png?size=1024">
+   <meta charset="UTF-8">
+   <title>Count down 2022</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Count down 2022 use your device time">
 </head>
 <body>
 <h1 class="title">Count Down 2022</h1>
