--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <style>
     *{
+        -webkit-user-drag: none;
+        user-select: none;
         color: white;
         background-color: black;
         text-shadow: 0 0px 10px rgba(255, 255, 255, 0.2);
@@ -20,7 +22,7 @@
         left: -10%;
         color: black;
         background-color: rgb(255, 255, 255);
-        border-radius: 5px;
+        border-radius: 3px;
         height: 60%;
         width: 50%;
     }
@@ -30,7 +32,7 @@
         left: 60%;
         color: black;
         background-color: rgb(255, 255, 255);
-        border-radius: 5px;
+        border-radius: 3px;
         height: 60%;
         width: 50%;
     }
@@ -42,6 +44,7 @@
     <title>Count Down</title>
    <link rel="icon" href="https://cdn.discordapp.com/emojis/877009969285845012.png?size=44">
    <meta charset="UTF-8">
+   <link rel="stylesheet" href="index.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="Count down 2023 use your device time">
 </head>
